name:                pfa
version:             0.1.0.0
synopsis: Parallel Functional Arrays
-- description:
homepage:            https://github.com/Lysxia/pfa#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2018 Li-yao Xia
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Data.PFA.Kumar
    Data.PFA.Internal.Log.Class
    Data.PFA.Internal.Log.Vector
    Data.PFA.Internal.Version
  build-depends:
    atomic-primops,
    vector,
    base >= 4.9 && < 5
  ghc-options: -Wall -Wno-name-shadowing
  default-language:    Haskell2010

test-suite simple-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: simple.hs
  build-depends:
    pfa,
    base
  default-language: Haskell2010

benchmark simple-bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: simple-bench.hs
  ghc-options: -O2
  build-depends:
    pfa,
    containers,
    criterion,
    MonadRandom,
    vector,
    base
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lysxia/pfa
